More minor tweaks in the hope that something works when submitting to the Extension Library!

--- a/Themes/Nord.css
+++ b/Themes/Nord.css
@@ -195,13 +195,13 @@ string {
   color: #a3be8c;
 }
 string.key {
-  color: #a3be8c;
+  color: #92b477;
 }
 string-template {
   color: #a3be8c;
 }
 string-template.value {
-  color: #a3be8c;
+  color: #92b477;
 }
 regex {
   color: #ebcb8b;
