After removing the extra images, I just got an 'invalid vendor' error when submitting; this was easily fixed: somehow, all the vendors I had registered disappeared! Fixed. Enjoy Nord for Nova! :-)

--- a/Themes/Nord.css
+++ b/Themes/Nord.css
@@ -1,3 +1,8 @@
+/**
+* Nord colour theme by Arctic Ice Studio adapted to Nova by Gwyneth Llewelyn
+* MIT license
+*/
+
 meta {
   -theme-interface-style: dark;
   -theme-vibrancy: none;
