--- a/Themes/Nord.css
+++ b/Themes/Nord.css
@@ -3,91 +3,323 @@ meta {
   -theme-vibrancy: none;
   -theme-accent-color: auto;
 }
+/*
+ * Copyright (c) 2016-present Arctic Ice Studio <development@arcticicestudio.com>
+ * Copyright (c) 2016-present Sven Greb <development@svengreb.de>
+ *
+ * Project:	Nord
+ * Version:	0.2.0
+ * Repository: https://github.com/arcticicestudio/nord
+ * License:	MIT
+ * References:
+ *   https://www.w3.org/TR/css-variables
+ *   https://www.w3.org/TR/selectors/#root-pseudo
+ *   https://drafts.csswg.org/css-variables
+ *   https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_variables
+ *   http://warpspire.com/kss
+ *   https://github.com/kss-node/kss-node
+ */
+/*
+An arctic, north-bluish color palette.
+Created for the clean- and minimal flat design pattern to achieve a optimal focus and readability for code syntax
+highlighting and UI.
+It consists of a total of sixteen, carefully selected, dimmed pastel colors for a eye-comfortable, but yet colorful
+ambiance.
 
+Styleguide Nord
+*/
+
+:root {
+  /*
+  Base component color of "Polar Night".
+
+  Used for texts, backgrounds, carets and structuring characters like curly- and square brackets.
+
+  Markup:
+  <div style="background-color:#2e3440; width=60; height=60"></div>
+
+  Styleguide Nord - Polar Night
+  */
+
+  --nord0: #2e3440;
+  /*
+  Lighter shade color of the base component color.
+
+  Used as a lighter background color for UI elements like status bars.
+
+  Markup:
+  <div style="background-color:#3b4252; width=60; height=60"></div>
+
+  Styleguide Nord - Polar Night
+  */
+
+  --nord1: #3b4252;
+  /*
+  Lighter shade color of the base component color.
+
+  Used as line highlighting in the editor.
+  In the UI scope it may be used as selection- and highlight color.
+
+  Markup:
+  <div style="background-color:#434c5e; width=60; height=60"></div>
+
+  Styleguide Nord - Polar Night
+  */
+
+  --nord2: #434c5e;
+  /*
+  Lighter shade color of the base component color.
+
+  Used for comments, invisibles, indent- and wrap guide marker.
+  In the UI scope used as pseudoclass color for disabled elements.
+
+  Markup:
+  <div style="background-color:#4c566a; width=60; height=60"></div>
+
+  Styleguide Nord - Polar Night
+  */
+
+  --nord3: #4c566a;
+  /*
+  Base component color of "Snow Storm".
+
+  Main color for text, variables, constants and attributes.
+  In the UI scope used as semi-light background depending on the theme shading design.
+
+  Markup:
+  <div style="background-color:#d8dee9; width=60; height=60"></div>
+
+  Styleguide Nord - Snow Storm
+  */
+
+  --nord4: #d8dee9;
+  /*
+  Lighter shade color of the base component color.
+
+  Used as a lighter background color for UI elements like status bars.
+  Used as semi-light background depending on the theme shading design.
+
+  Markup:
+  <div style="background-color:#e5e9f0; width=60; height=60"></div>
+
+  Styleguide Nord - Snow Storm
+  */
+
+  --nord5: #e5e9f0;
+  /*
+  Lighter shade color of the base component color.
+
+  Used for punctuations, carets and structuring characters like curly- and square brackets.
+  In the UI scope used as background, selection- and highlight color depending on the theme shading design.
+
+  Markup:
+  <div style="background-color:#eceff4; width=60; height=60"></div>
+
+  Styleguide Nord - Snow Storm
+  */
+
+  --nord6: #eceff4;
+  /*
+  Bluish core color.
+
+  Used for classes, types and documentation tags.
+
+  Markup:
+  <div style="background-color:#8fbcbb; width=60; height=60"></div>
+
+  Styleguide Nord - Frost
+  */
+
+  --nord7: #8fbcbb;
+  /*
+  Bluish core accent color.
+
+  Represents the accent color of the color palette.
+  Main color for primary UI elements and methods/functions.
+
+  Can be used for
+  - Markup quotes
+  - Markup link URLs
+
+  Markup:
+  <div style="background-color:#88c0d0; width=60; height=60"></div>
+
+  Styleguide Nord - Frost
+  */
+
+  --nord8: #88c0d0;
+  /*
+  Bluish core color.
+
+  Used for language-specific syntactic/reserved support characters and keywords, operators, tags, units and
+  punctuations like (semi)colons,commas and braces.
+
+  Markup:
+  <div style="background-color:#81a1c1; width=60; height=60"></div>
+
+  Styleguide Nord - Frost
+  */
+
+  --nord9: #81a1c1;
+  /*
+  Bluish core color.
+
+  Used for markup doctypes, import/include/require statements, pre-processor statements and at-rules (`@`).
+
+  Markup:
+  <div style="background-color:#5e81ac; width=60; height=60"></div>
+
+  Styleguide Nord - Frost
+  */
+
+  --nord10: #5e81ac;
+  /*
+  Colorful component color.
+
+  Used for errors, git/diff deletion and linter marker.
+
+  Markup:
+  <div style="background-color:#bf616a; width=60; height=60"></div>
+
+  Styleguide Nord - Aurora
+  */
+
+  --nord11: #bf616a;
+  /*
+  Colorful component color.
+
+  Used for annotations.
+
+  Markup:
+  <div style="background-color:#d08770; width=60; height=60"></div>
+
+  Styleguide Nord - Aurora
+  */
+
+  --nord12: #d08770;
+  /*
+  Colorful component color.
+
+  Used for escape characters, regular expressions and markup entities.
+  In the UI scope used for warnings and git/diff renamings.
+
+  Markup:
+  <div style="background-color:#ebcb8b; width=60; height=60"></div>
+
+  Styleguide Nord - Aurora
+  */
+
+  --nord13: #ebcb8b;
+  /*
+  Colorful component color.
+
+  Main color for strings and attribute values.
+  In the UI scope used for git/diff additions and success visualizations.
+
+  Markup:
+  <div style="background-color:#a3be8c; width=60; height=60"></div>
+
+  Styleguide Nord - Aurora
+  */
+
+  --nord14: #a3be8c;
+  /*
+  Colorful component color.
+
+  Used for numbers.
+
+  Markup:
+  <div style="background-color:#b48ead; width=60; height=60"></div>
+
+  Styleguide Nord - Aurora
+  */
+
+  --nord15: #b48ead;
+}
 /*
  * Window styles
  */
 meta.window {
-  background-color: #2e3440;
-  color: #d8dee9;
+  background-color: var(--nord0);
+  color: var(--nord4);
 }
 meta.titlebar {
-  color: #d8dee9;
-  background: linear-gradient(#3b4358, #3b4252);
+  color: var(--nord4);
+  background: linear-gradient(var(--nord3), var(--nord1));
   border-color: #6d8eb5;
 }
 meta.titlebar.inactive {
-  background-color: #4c566a;
+  background-color: var(--nord3);
 }
 
 meta.button {
-  background: linear-gradient(#3b4358, #3b4252);
+  background: linear-gradient(var(--nord3), var(--nord1));
   border-style: solid;
-  border-image: linear-gradient(45deg, #6d8eb5, #88c0d0) 1;
-  color: #d8dee9;
+  border-image: linear-gradient(45deg, #6d8eb5, var(--nord8)) 1;
+  color: var(--nord4);
 }
 meta.button.highlighted {
-  background-color: #4c566a;
-  color: #d8dee9;
+  background-color: var(--nord3);
+  color: var(--nord4);
 }
 meta.button.selected {
   background-color: #2d3241;
-  color: #d8dee9;
+  color: var(--nord4);
 }
 meta.button.highlighted.selected {
-  background-color: #4c566a;
-  color: #d8dee9;
+  background-color: var(--nord3);
+  color: var(--nord4);
 }
 meta.button.disabled {
-  background: linear-gradient(#2d3241, #3b4252);
+  background: linear-gradient(#2d3241, var(--nord1));
   border-style: solid;
-  border-image: linear-gradient(45deg, #3b4358, #2e3440) 1;
-  color: #81a1c1;
+  border-image: linear-gradient(45deg, var(--nord3), var(--nord0)) 1;
+  color: var(--nord9);
 }
 meta.textfield {
-  background-color: #4c566a;
-  border-color: #b48ead;
+  background-color: var(--nord3);
+  border-color: var(--nord15);
 }
 meta.accent {
-  color: #3b4358;
+  color: var(--nord3);
 }
 
 /*
  * Document styles
  */
 meta.document {
-  background-color: #2e3440;
-  color: #d8dee9;
+  background-color: var(--nord0);
+  color: var(--nord4);
 }
 
 meta.document.button {
-  background: linear-gradient(#3b4358, #3b4252);
+  background: linear-gradient(var(--nord3), var(--nord1));
   border-style: solid;
-  border-image: linear-gradient(45deg, #6d8eb5, #88c0d0) 1;
-  color: #d8dee9;
+  border-image: linear-gradient(45deg, #6d8eb5, var(--nord8)) 1;
+  color: var(--nord4);
 }
 meta.document.button.disabled {
-  background: linear-gradient(#2d3241, #3b4252);
+  background: linear-gradient(#2d3241, var(--nord1));
   border-style: solid;
-  border-image: linear-gradient(45deg, #3b4358, #2e3440) 1;
-  color: #81a1c1;
+  border-image: linear-gradient(45deg, var(--nord3), var(--nord0)) 1;
+  color: var(--nord9);
 }
 meta.document.button.highlighted {
-  background-color: #4c566a;
-  color: #d8dee9;
+  background-color: var(--nord3);
+  color: var(--nord4);
 }
 meta.document.textfield {
-  background-color: #4c566a;
-  border-color: #b48ead;
+  background-color: var(--nord3);
+  border-color: var(--nord15);
 }
 
 /* Text */
 meta.text {
-  background-color: #2e3440;
-  color: #d8dee9;
+  background-color: var(--nord0);
+  color: var(--nord4);
 }
 meta.text.invisible {
-  color: #4c566a;
+  color: var(--nord3);
 }
 meta.text.selected {
   color: #333a4c;
@@ -98,7 +330,7 @@ meta.cursor {
 }
 /* Indentation Guides */
 meta.indentguide {
-  color: #4c566a;
+  color: var(--nord3);
 }
 /* Gutter */
 meta.gutter {
@@ -112,13 +344,13 @@ meta.gutter.selected {
  */
 
 keyword {
-  color: #81a1c1;
+  color: var(--nord9);
   text-decoration-line: none;
   text-decoration: none;
   font-weight: normal;
 }
 comment {
-  color: #4c566a;
+  color: var(--nord3);
   font-style: normal;
   font-weight: normal;
 }
@@ -130,14 +362,14 @@ declaration {
   color: #4b6c9e;
 }
 bracket {
-  color: #4c566a;
+  color: var(--nord3);
 }
 operator {
-  color: #81a1c1;
+  color: var(--nord9);
 }
 invalid {
-  background-color: #bf616a;
-  color: #d8dee9;
+  background-color: var(--nord11);
+  color: var(--nord4);
   font-weight: normal;
 }
 link {
@@ -156,7 +388,7 @@ value.number {
   color: #a5789e;
 }
 value.entity {
-  color: #d08770;
+  color: var(--nord12);
 }
 value.symbol {
   color: #92b477;
@@ -168,11 +400,11 @@ identifier.type {
   text-decoration: none;
 }
 identifier.constant {
-  color: #d08770;
+  color: var(--nord12);
 }
 identifier.global,
 identifier.variable {
-  color: #d8dee9;
+  color: var(--nord4);
 }
 identifier.decorator {
   color: #92b477;
@@ -180,37 +412,37 @@ identifier.decorator {
 identifier.property,
 identifier.function,
 identifier.method {
-  color: #88c0d0;
+  color: var(--nord8);
   text-decoration: none;
 }
 identifier.key {
-  color: #8fbcbb;
+  color: var(--nord7);
 }
 identifier.argument {
-  color: #a3be8c;
+  color: var(--nord14);
 }
 
 /* Strings */
 string {
-  color: #a3be8c;
+  color: var(--nord14);
 }
 string.key {
   color: #92b477;
 }
 string-template {
-  color: #a3be8c;
+  color: var(--nord14);
 }
 string-template.value {
   color: #92b477;
 }
 regex {
-  color: #ebcb8b;
+  color: var(--nord13);
 }
 regex.escaped {
-  color: #d08770;
+  color: var(--nord12);
 }
 cdata {
-  color: #4c566a;
+  color: var(--nord3);
   font-weight: bold;
 }
 
@@ -219,25 +451,26 @@ markup.heading {
   color: #4b6c9e;
 }
 markup.line {
-  color: #d8dee9;
+  color: var(--nord4);
 }
 markup.bold {
-  color: #81a1c1;
+  color: var(--nord9);
   font-weight: bold;
 }
 markup.italic {
-  color: #a3be8c;
+  color: var(--nord14);
   font-style: italic;
 }
 markup.strikethrough {
-  color: #81a1c1;
+  color: var(--nord9);
   text-decoration-line: line-through;
 }
 markup.list.item {
-  color: #8fbcbb;
+  color: var(--nord7);
 }
 markup.code {
-  background-color: #d08770;
+  color: var(--nord12);
+  background-color: 
 }
 
 /* Types */
@@ -260,16 +493,16 @@ definition.method method.name {
 
 /* Tags */
 tag {
-  color: #81a1c1;
+  color: var(--nord9);
 }
 tag.framework {
   color: #4b6c9e;
 }
 tag.attribute.name {
-  color: #8fbcbb;
+  color: var(--nord7);
 }
 tag.attribute.value {
-  color: #a3be8c;
+  color: var(--nord14);
 }
 tag.attribute.value.link {
   text-decoration: underline;
@@ -277,20 +510,20 @@ tag.attribute.value.link {
 
 /* Styles */
 style.at {
-  color: #d08770;
+  color: var(--nord12);
   font-style: normal;
 }
 style.selector.element {
   font-weight: bold;
 }
 style.selector.identifier.id {
-  color: #81a1c1;
+  color: var(--nord9);
 }
 style.selector.identifier.class {
-  color: #8fbcbb;
+  color: var(--nord7);
 }
 style.selector.pseudoclass {
-  color: #a3be8c;
+  color: var(--nord14);
 }
 style.selector.pseudoelement {
   font-weight: normal;
@@ -337,7 +570,7 @@ terminal.white {
   color: #dfe3ed;
 }
 terminal.bright-black {
-  color: #3b4358;
+  color: var(--nord3);
 }
 terminal.bright-red {
   color: #b14a56;
