--- a/Themes/Nord.css
+++ b/Themes/Nord.css
@@ -3,6 +3,7 @@ meta {
   -theme-vibrancy: none;
   -theme-accent-color: auto;
 }
+
 /*
  * Copyright (c) 2016-present Arctic Ice Studio <development@arcticicestudio.com>
  * Copyright (c) 2016-present Sven Greb <development@svengreb.de>
@@ -21,322 +22,113 @@ meta {
  */
 /*
 An arctic, north-bluish color palette.
-Created for the clean- and minimal flat design pattern to achieve a optimal focus and readability for code syntax
-highlighting and UI.
-It consists of a total of sixteen, carefully selected, dimmed pastel colors for a eye-comfortable, but yet colorful
-ambiance.
-
-Styleguide Nord
+Created for the clean- and minimal flat design pattern to achieve a optimal focus 
+and readability for code syntax highlighting and UI.
+It consists of a total of sixteen, carefully selected, dimmed pastel colors for a 
+eye-comfortable, but yet colorful ambiance.
 */
 
-:root {
-  /*
-  Base component color of "Polar Night".
-
-  Used for texts, backgrounds, carets and structuring characters like curly- and square brackets.
-
-  Markup:
-  <div style="background-color:#2e3440; width=60; height=60"></div>
-
-  Styleguide Nord - Polar Night
-  */
-
-  --nord0: #2e3440;
-  /*
-  Lighter shade color of the base component color.
-
-  Used as a lighter background color for UI elements like status bars.
-
-  Markup:
-  <div style="background-color:#3b4252; width=60; height=60"></div>
-
-  Styleguide Nord - Polar Night
-  */
-
-  --nord1: #3b4252;
-  /*
-  Lighter shade color of the base component color.
-
-  Used as line highlighting in the editor.
-  In the UI scope it may be used as selection- and highlight color.
-
-  Markup:
-  <div style="background-color:#434c5e; width=60; height=60"></div>
-
-  Styleguide Nord - Polar Night
-  */
-
-  --nord2: #434c5e;
-  /*
-  Lighter shade color of the base component color.
-
-  Used for comments, invisibles, indent- and wrap guide marker.
-  In the UI scope used as pseudoclass color for disabled elements.
-
-  Markup:
-  <div style="background-color:#4c566a; width=60; height=60"></div>
-
-  Styleguide Nord - Polar Night
-  */
-
-  --nord3: #4c566a;
-  /*
-  Base component color of "Snow Storm".
-
-  Main color for text, variables, constants and attributes.
-  In the UI scope used as semi-light background depending on the theme shading design.
-
-  Markup:
-  <div style="background-color:#d8dee9; width=60; height=60"></div>
-
-  Styleguide Nord - Snow Storm
-  */
-
-  --nord4: #d8dee9;
-  /*
-  Lighter shade color of the base component color.
-
-  Used as a lighter background color for UI elements like status bars.
-  Used as semi-light background depending on the theme shading design.
-
-  Markup:
-  <div style="background-color:#e5e9f0; width=60; height=60"></div>
-
-  Styleguide Nord - Snow Storm
-  */
-
-  --nord5: #e5e9f0;
-  /*
-  Lighter shade color of the base component color.
-
-  Used for punctuations, carets and structuring characters like curly- and square brackets.
-  In the UI scope used as background, selection- and highlight color depending on the theme shading design.
-
-  Markup:
-  <div style="background-color:#eceff4; width=60; height=60"></div>
-
-  Styleguide Nord - Snow Storm
-  */
-
-  --nord6: #eceff4;
-  /*
-  Bluish core color.
-
-  Used for classes, types and documentation tags.
-
-  Markup:
-  <div style="background-color:#8fbcbb; width=60; height=60"></div>
-
-  Styleguide Nord - Frost
-  */
-
-  --nord7: #8fbcbb;
-  /*
-  Bluish core accent color.
-
-  Represents the accent color of the color palette.
-  Main color for primary UI elements and methods/functions.
-
-  Can be used for
-  - Markup quotes
-  - Markup link URLs
-
-  Markup:
-  <div style="background-color:#88c0d0; width=60; height=60"></div>
-
-  Styleguide Nord - Frost
-  */
-
-  --nord8: #88c0d0;
-  /*
-  Bluish core color.
-
-  Used for language-specific syntactic/reserved support characters and keywords, operators, tags, units and
-  punctuations like (semi)colons,commas and braces.
-
-  Markup:
-  <div style="background-color:#81a1c1; width=60; height=60"></div>
-
-  Styleguide Nord - Frost
-  */
-
-  --nord9: #81a1c1;
-  /*
-  Bluish core color.
-
-  Used for markup doctypes, import/include/require statements, pre-processor statements and at-rules (`@`).
-
-  Markup:
-  <div style="background-color:#5e81ac; width=60; height=60"></div>
-
-  Styleguide Nord - Frost
-  */
-
-  --nord10: #5e81ac;
-  /*
-  Colorful component color.
-
-  Used for errors, git/diff deletion and linter marker.
-
-  Markup:
-  <div style="background-color:#bf616a; width=60; height=60"></div>
-
-  Styleguide Nord - Aurora
-  */
-
-  --nord11: #bf616a;
-  /*
-  Colorful component color.
-
-  Used for annotations.
-
-  Markup:
-  <div style="background-color:#d08770; width=60; height=60"></div>
-
-  Styleguide Nord - Aurora
-  */
-
-  --nord12: #d08770;
-  /*
-  Colorful component color.
-
-  Used for escape characters, regular expressions and markup entities.
-  In the UI scope used for warnings and git/diff renamings.
-
-  Markup:
-  <div style="background-color:#ebcb8b; width=60; height=60"></div>
-
-  Styleguide Nord - Aurora
-  */
-
-  --nord13: #ebcb8b;
-  /*
-  Colorful component color.
-
-  Main color for strings and attribute values.
-  In the UI scope used for git/diff additions and success visualizations.
-
-  Markup:
-  <div style="background-color:#a3be8c; width=60; height=60"></div>
-
-  Styleguide Nord - Aurora
-  */
-
-  --nord14: #a3be8c;
-  /*
-  Colorful component color.
-
-  Used for numbers.
-
-  Markup:
-  <div style="background-color:#b48ead; width=60; height=60"></div>
-
-  Styleguide Nord - Aurora
-  */
-
-  --nord15: #b48ead;
-}
 /*
  * Window styles
  */
 meta.window {
-  background-color: var(--nord0);
-  color: var(--nord4);
+  background-color: #2e3440;
+  color: #d8dee9;
 }
 meta.titlebar {
-  color: var(--nord4);
-  background: linear-gradient(var(--nord3), var(--nord1));
-  border-color: #6d8eb5;
+  color: #d8dee9;
+  background: linear-gradient(#4c566a, #3b4252);
+  border-color: #5e81ac;
 }
 meta.titlebar.inactive {
-  background-color: var(--nord3);
+  background-color: #4c566a;
 }
 
 meta.button {
-  background: linear-gradient(var(--nord3), var(--nord1));
+  background: linear-gradient(#4c566a, #3b4252);
   border-style: solid;
-  border-image: linear-gradient(45deg, #6d8eb5, var(--nord8)) 1;
-  color: var(--nord4);
+  border-image: linear-gradient(45deg, #5e81ac, #88c0d0) 1;
+  color: #d8dee9;
 }
 meta.button.highlighted {
-  background-color: var(--nord3);
-  color: var(--nord4);
+  background-color: #4c566a;
+  color: #d8dee9;
 }
 meta.button.selected {
-  background-color: #2d3241;
-  color: var(--nord4);
+  background-color: #2e3440;
+  color: #d8dee9;
 }
 meta.button.highlighted.selected {
-  background-color: var(--nord3);
-  color: var(--nord4);
+  background-color: #4c566a;
+  color: #d8dee9;
 }
 meta.button.disabled {
-  background: linear-gradient(#2d3241, var(--nord1));
+  background: linear-gradient(#2e3440, #3b4252);
   border-style: solid;
-  border-image: linear-gradient(45deg, var(--nord3), var(--nord0)) 1;
-  color: var(--nord9);
+  border-image: linear-gradient(45deg, #4c566a, #2e3440) 1;
+  color: #81a1c1;
 }
 meta.textfield {
-  background-color: var(--nord3);
-  border-color: var(--nord15);
+  background-color: #4c566a;
+  border-color: #b48ead;
 }
 meta.accent {
-  color: var(--nord3);
+  color: #4c566a;
 }
 
 /*
  * Document styles
  */
 meta.document {
-  background-color: var(--nord0);
-  color: var(--nord4);
+  background-color: #2e3440;
+  color: #d8dee9;
 }
 
 meta.document.button {
-  background: linear-gradient(var(--nord3), var(--nord1));
+  background: linear-gradient(#4c566a, #3b4252);
   border-style: solid;
-  border-image: linear-gradient(45deg, #6d8eb5, var(--nord8)) 1;
-  color: var(--nord4);
+  border-image: linear-gradient(45deg, #5e81ac, #88c0d0) 1;
+  color: #d8dee9;
 }
 meta.document.button.disabled {
-  background: linear-gradient(#2d3241, var(--nord1));
+  background: linear-gradient(#2e3440, #3b4252);
   border-style: solid;
-  border-image: linear-gradient(45deg, var(--nord3), var(--nord0)) 1;
-  color: var(--nord9);
+  border-image: linear-gradient(45deg, #4c566a, #2e3440) 1;
+  color: #81a1c1;
 }
 meta.document.button.highlighted {
-  background-color: var(--nord3);
-  color: var(--nord4);
+  background-color: #4c566a;
+  color: #d8dee9;
 }
 meta.document.textfield {
-  background-color: var(--nord3);
-  border-color: var(--nord15);
+  background-color: #4c566a;
+  border-color: #b48ead;
 }
 
 /* Text */
 meta.text {
-  background-color: var(--nord0);
-  color: var(--nord4);
+  background-color: #2e3440;
+  color: #d8dee9;
 }
 meta.text.invisible {
-  color: var(--nord3);
+  color: #4c566a;
 }
 meta.text.selected {
-  color: #333a4c;
+  color: #434c5e;
 }
 /* Cursor */
 meta.cursor {
-  color: #cfd6e4;
+  color: #d8dee9;
 }
 /* Indentation Guides */
 meta.indentguide {
-  color: var(--nord3);
+  color: #4c566a;
 }
 /* Gutter */
 meta.gutter {
 }
 meta.gutter.selected {
-  color: #333a4c;
+  color: #434c5e;
 }
 
 /*
@@ -344,133 +136,133 @@ meta.gutter.selected {
  */
 
 keyword {
-  color: var(--nord9);
+  color: #81a1c1;
   text-decoration-line: none;
   text-decoration: none;
   font-weight: normal;
 }
 comment {
-  color: var(--nord3);
+  color: #4c566a;
   font-style: normal;
   font-weight: normal;
 }
 processing {
-  color: #4b6c9e;
+  color: #5e81ac;
   font-weight: normal;
 }
 declaration {
-  color: #4b6c9e;
+  color: #5e81ac;
 }
 bracket {
-  color: var(--nord3);
+  color: #4c566a;
 }
 operator {
-  color: var(--nord9);
+  color: #81a1c1;
 }
 invalid {
-  background-color: var(--nord11);
-  color: var(--nord4);
+  background-color: #bf616a;
+  color: #d8dee9;
   font-weight: normal;
 }
 link {
-  color: #cfd6e4;
+  color: #d8dee9;
   text-decoration: underline;
 }
 
 /* Values */
 value.boolean {
-  color: #a5789e;
+  color: #b48ead;
 }
 value.null {
-  color: #a5789e;
+  color: #b48ead;
 }
 value.number {
-  color: #a5789e;
+  color: #b48ead;
 }
 value.entity {
-  color: var(--nord12);
+  color: #d08770;
 }
 value.symbol {
-  color: #92b477;
+  color: #a3be8c;
 }
 
 /* Identifiers */
 identifier.type {
-  color: #6d8eb5;
+  color: #5e81ac;
   text-decoration: none;
 }
 identifier.constant {
-  color: var(--nord12);
+  color: #d08770;
 }
 identifier.global,
 identifier.variable {
-  color: var(--nord4);
+  color: #d8dee9;
 }
 identifier.decorator {
-  color: #92b477;
+  color: #a3be8c;
 }
 identifier.property,
 identifier.function,
 identifier.method {
-  color: var(--nord8);
+  color: #88c0d0;
   text-decoration: none;
 }
 identifier.key {
-  color: var(--nord7);
+  color: #8fbcbb;
 }
 identifier.argument {
-  color: var(--nord14);
+  color: #a3be8c;
 }
 
 /* Strings */
 string {
-  color: var(--nord14);
+  color: #a3be8c;
 }
 string.key {
-  color: #92b477;
+  color: #a3be8c;
 }
 string-template {
-  color: var(--nord14);
+  color: #a3be8c;
 }
 string-template.value {
-  color: #92b477;
+  color: #a3be8c;
 }
 regex {
-  color: var(--nord13);
+  color: #ebcb8b;
 }
 regex.escaped {
-  color: var(--nord12);
+  color: #d08770;
 }
 cdata {
-  color: var(--nord3);
+  color: #4c566a;
   font-weight: bold;
 }
 
 /* Markup */
 markup.heading {
-  color: #4b6c9e;
+  color: #5e81ac;
 }
 markup.line {
-  color: var(--nord4);
+  color: #d8dee9;
 }
 markup.bold {
-  color: var(--nord9);
+  color: #81a1c1;
   font-weight: bold;
 }
 markup.italic {
-  color: var(--nord14);
+  color: #a3be8c;
   font-style: italic;
 }
 markup.strikethrough {
-  color: var(--nord9);
+  color: #81a1c1;
   text-decoration-line: line-through;
 }
 markup.list.item {
-  color: var(--nord7);
+  color: #8fbcbb;
 }
 markup.code {
-  color: var(--nord12);
-  background-color: 
+  color: #d08770;
+  background-color: #4c566a;
 }
 
 /* Types */
@@ -481,28 +273,28 @@ definition.enum enum.name,
 definition.union union.name,
 definition.struct struct.name {
   font-weight: bold;
-  color: #4b6c9e;
+  color: #5e81ac;
 }
 
 /* Members */
 definition.property property.name,
 definition.function function.name,
 definition.method method.name {
-  color: #7cafad;
+  color: #a3be8c;
 }
 
 /* Tags */
 tag {
-  color: var(--nord9);
+  color: #81a1c1;
 }
 tag.framework {
-  color: #4b6c9e;
+  color: #5e81ac;
 }
 tag.attribute.name {
-  color: var(--nord7);
+  color: #8fbcbb;
 }
 tag.attribute.value {
-  color: var(--nord14);
+  color: #a3be8c;
 }
 tag.attribute.value.link {
   text-decoration: underline;
@@ -510,86 +302,86 @@ tag.attribute.value.link {
 
 /* Styles */
 style.at {
-  color: var(--nord12);
+  color: #d08770;
   font-style: normal;
 }
 style.selector.element {
   font-weight: bold;
 }
 style.selector.identifier.id {
-  color: var(--nord9);
+  color: #81a1c1;
 }
 style.selector.identifier.class {
-  color: var(--nord7);
+  color: #8fbcbb;
 }
 style.selector.pseudoclass {
-  color: var(--nord14);
+  color: #a3be8c;
 }
 style.selector.pseudoelement {
   font-weight: normal;
 }
 style.attribute.name {
-  color: #6d8eb5;
+  color: #5e81ac;
 }
 style.value.number {
-  color: #a5789e;
+  color: #b48ead;
 }
 style.value.color.hex {
-  color: #a5789e;
+  color: #b48ead;
 }
 style.value.keyword {
-  color: #6d8eb5;
+  color: #5e81ac;
 }
 style.value.color.named {
-  color: #a5789e;
+  color: #b48ead;
 }
 
 /* Terminal */
 terminal.black {
-  color: #2d3241;
+  color: #2e3440;
 }
 terminal.red {
-  color: #b14a56;
+  color: #bf616a;
 }
 terminal.green {
-  color: #92b477;
+  color: #a3be8c;
 }
 terminal.yellow {
-  color: #e6c274;
+  color: #ebcb8b;
 }
 terminal.blue {
-  color: #6d8eb5;
+  color: #5e81ac;
 }
 terminal.magenta {
-  color: #6d8eb5;
+  color: #b48ead;
 }
 terminal.cyan {
-  color: #75b3c7;
+  color: #88c0d0;
 }
 terminal.white {
-  color: #dfe3ed;
+  color: #eceff4;
 }
 terminal.bright-black {
-  color: var(--nord3);
+  color: #4c566a;
 }
 terminal.bright-red {
-  color: #b14a56;
+  color: #bf616a;
 }
 terminal.bright-green {
-  color: #92b477;
+  color: #a3be8c;
 }
 terminal.bright-yellow {
-  color: #e6c274;
+  color: #ebcb8b;
 }
 terminal.bright-blue {
-  color: #6d8eb5;
+  color: #5e81ac;
 }
 terminal.bright-magenta {
-  color: #6d8eb5;
+  color: #b48ead;
 }
 terminal.bright-cyan {
-  color: #75b3c7;
+  color: #88c0d0;
 }
 terminal.bright-white {
-  color: #e7ebf1;
+  color: #e5e9f0;
 }
