Forgot to update colour for javascript-bracket

--- a/Themes/Nord.css
+++ b/Themes/Nord.css
@@ -663,5 +663,6 @@ javascript.separator {
 }
 
 javascript.bracket {
-  color: #4c566a; /* nord3 */
+/*  color: #4c566a; /* nord3 */
+  color: #eceff4; /* nord6 */
 }
